--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,20 @@ header h1 {
     font-size: 40px;
 }
 
+.container h2 {
+    margin-bottom: 14px;
+}
+
 header img {
     vertical-align: middle;
 }
 
-.container {
+.selection {
     width: 1000px;
     background-color: white;
-    margin: 50px auto;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 2px;
     padding-top: 16px;
     padding-bottom: 10px;
     padding-left: 80px;
@@ -35,17 +41,30 @@ header img {
     border-top-right-radius: 8px;
 }
 
+.list {
+    width: 1000px;
+    height: 400px;
+    background-color: white;
+    margin: auto;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding-top: 40px;
+    padding-left: 80px;
+}
+
 button {
     padding: 8px 12px;
     border-radius: 6px;
     font-size: 12px;
     font-weight: bold;
+    margin-right: 4px;
 }
 
 .blue-button {
     color: white;
     background-color: rgb(106, 200, 243);
-    border: none;
+    border-style: solid;
+    border-color: rgb(106, 200, 243);
 }
 
 .empty-button {
@@ -53,4 +72,27 @@ button {
     border-style: solid;
     border-color: lightgrey;
     color: lightgrey;
+}
+
+ul {
+    list-style: none;
+}
+
+.circle {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+    line-height: 24px;
+    border-radius: 50%;
+    border: 1px solid greenyellow;
+    color: greenyellow;
+}
+
+.icon {
+    display: inline-block;
+    background-color: rgb(106, 200, 243);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10px;
 }
