--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ header h1 {
 }
 
 .container h2 {
-    margin-bottom: 14px;
+    padding-top: 40px;
+    margin-bottom: 10px;
 }
 
 header img {
@@ -43,12 +44,12 @@ header img {
 
 .list {
     width: 1000px;
-    height: 400px;
     background-color: white;
     margin: auto;
+    margin-bottom: 20px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-    padding-top: 40px;
+    padding-bottom: 40px;
     padding-left: 80px;
 }
 
@@ -76,6 +77,7 @@ button {
 
 ul {
     list-style: none;
+    line-height: 50px;
 }
 
 .circle {
@@ -85,14 +87,47 @@ ul {
     text-align: center;
     line-height: 24px;
     border-radius: 50%;
+}
+
+.check {
     border: 1px solid greenyellow;
     color: greenyellow;
 }
 
+.cross {
+    border: 1px solid rgb(255, 47, 47);
+    color: rgb(255, 47, 47);
+}
+
 .icon {
     display: inline-block;
-    background-color: rgb(106, 200, 243);
     color: white;
     padding: 5px 10px;
     border-radius: 10px;
+    height: 30px;
+    line-height: normal;
+}
+
+.editorial {
+    background-color: rgb(106, 200, 243);
+}
+
+.goals {
+    background-color: blueviolet;
+}
+
+.recruiting {
+    background-color: rgb(91, 241, 209);
+}
+
+.mobile {
+    background-color: orange;
+}
+
+.website {
+    background-color: rgb(116, 216, 91);
+}
+
+.sales {
+    background-color: green;
 }
